@@ -81,8 +81,8 @@ describe("the usage instructions", () => {
 			and bumping version numbers in package.json files.
 
 			Supported file formats:
-			  * AsciiDoc changelogs in Keep a Changelog format (*.adoc)
-			  * package.json
+			  * AsciiDoc-based changelogs (*.adoc) in Keep a Changelog format.
+			  * package.json.
 
 			Options:
 			  --files <patterns>           Update files matching the glob patterns.
