@@ -22,8 +22,8 @@ This tool prepares a repository for an upcoming release by updating changelogs
 and bumping version numbers in package.json files.
 
 Supported file formats:
-  * AsciiDoc changelogs in Keep a Changelog format (*.adoc)
-  * package.json
+  * AsciiDoc-based changelogs (*.adoc) in Keep a Changelog format.
+  * package.json.
 
 Options:
   --files <patterns>           Update files matching the glob patterns.
