@@ -1,0 +1,2 @@
+#!/usr/bin/env node
+import "../dist/main.js"
