@@ -7,3 +7,10 @@ This file documents all notable changes to this project.
 The format is based on https://keepachangelog.com/en/1.1.0[Keep a Changelog], and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].
 
 == {url-github-repository}[Unreleased]
+
+=== Added
+* A Node.js-based entrypoint for the command-line interface named `updraft`.
+* New option: `--files`.
+* New option: `--help`.
+* New option: `--release-version`.
+* New option: `--version`.
